--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>WireBarley &mdash; Currency Converter</title>
@@ -9,21 +10,27 @@
   <h1>환율 계산</h1>
   <div id="main">
     <p>송금국가: 미국(USD)</p>
-    <p>수취국가:
-      <select>
-        <option value="">한국(KRW)</option>
-        <option value="">일본(JPN)</option>
-        <option value="">필리핀(PHP)</option>
-      </select>
+    <p>
+      <label for="recipient-country">수취국가:
+        <select id="recipient-country">
+          <option disabled selected>수취국가를 선택하세요</option>
+          <option value="KRW">한국(KRW)</option>
+          <option value="JPY">일본(JPN)</option>
+          <option value="PHP">필리핀(PHP)</option>
+        </select>
+      </label>
     </p>
-    <p>환율: </p>
+    <p id="currency">환율: <span></span></p>
     <p>송금액:
-      <input>
+      <label for="wiring-amounts">
+        <input type="number" step="0.01" id="wiring-amounts">
+      </label>
       <span>USD</span>
     </p>
-    <button type="button">Submit</button>
+    <button type="button" id="submit-btn">Submit</button>
   </div>
-
   <p id="result"></p>
+
+  <script th:src="@{/main.js}"></script>
 </body>
 </html>
