--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>WireBarley &mdash; Currency Converter</title>
@@ -21,7 +20,8 @@
       </label>
     </p>
     <p id="currency">환율: <span></span></p>
-    <p>송금액:
+    <p>
+      <span>송금액:</span>
       <label for="wiring-amounts">
         <input type="number" step="0.01" id="wiring-amounts">
       </label>
