Add exception handling code

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>WireBarley &mdash; Currency Converter</title>
+  <title>Currency Converter</title>
   <link rel="stylesheet" type="text/css" media="screen" th:href="@{/main.css}"/>
 </head>
 <body>
